--- a/intl/l10n/rust/l10nregistry-rs/Cargo.toml
+++ b/intl/l10n/rust/l10nregistry-rs/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1"
 fluent-bundle = { path = "/Users/greg/dev/fluent-rs/fluent-bundle" }
-fluent-fallback = "0.6.0"
-fluent-testing = { version = "0.0.2", optional = true, features = ["sync", "async"] }
+fluent-fallback = { path = "/Users/greg/dev/fluent-rs/fluent-fallback" }
+fluent-testing = { path = "/Users/greg/dev/fluent-rs/fluent-testing", optional = true, features = ["sync", "async"] }
 futures = "0.3"
 pin-project-lite = "0.2"
 replace_with = "0.1"
