--- a/intl/l10n/rust/localization-ffi/Cargo.toml
+++ b/intl/l10n/rust/localization-ffi/Cargo.toml
@@ -10,13 +10,13 @@ futures = "0.3"
 nserror = { path = "../../../../xpcom/rust/nserror" }
 nsstring = { path = "../../../../xpcom/rust/nsstring" }
 l10nregistry = { path = "../l10nregistry-rs" }
-fluent = "0.16.0"
+fluent = { path = "/Users/greg/dev/fluent-rs/fluent" }
 unic-langid = "0.9"
 thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
 async-trait = "0.1"
 moz_task = { path = "../../../../xpcom/rust/moz_task" }
 fluent-ffi = { path = "../fluent-ffi" }
-fluent-fallback = "0.6.0"
+fluent-fallback = { path = "/Users/greg/dev/fluent-rs/fluent-fallback" }
 l10nregistry-ffi = { path = "../l10nregistry-ffi" }
 xpcom = { path = "../../../../xpcom/rust/xpcom" }
 cstr = "0.2"
