--- a/intl/l10n/rust/l10nregistry-ffi/Cargo.toml
+++ b/intl/l10n/rust/l10nregistry-ffi/Cargo.toml
@@ -13,11 +13,11 @@ log = "0.4"
 nserror = { path = "../../../../xpcom/rust/nserror" }
 nsstring = { path = "../../../../xpcom/rust/nsstring" }
 l10nregistry = { path = "../l10nregistry-rs" }
-fluent = { version = "0.16.0", features = ["fluent-pseudo"] }
+fluent = { path = "/Users/greg/dev/fluent-rs/fluent", features = ["fluent-pseudo"] }
 unic-langid = "0.9"
 thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
 async-trait = "0.1"
 moz_task = { path = "../../../../xpcom/rust/moz_task" }
 xpcom = { path = "../../../../xpcom/rust/xpcom" }
 fluent-ffi = { path = "../fluent-ffi" }
-fluent-fallback = "0.6.0"
+fluent-fallback = { path = "/Users/greg/dev/fluent-rs/fluent-fallback" }
