--- a/intl/l10n/rust/fluent-ffi/Cargo.toml
+++ b/intl/l10n/rust/fluent-ffi/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Zibi Braniecki <zibi@braniecki.net>"]
 edition = "2018"
 
 [dependencies]
-fluent = { version = "0.16.0", features = ["fluent-pseudo"] }
-fluent-pseudo = "0.3.1"
-intl-memoizer = "0.5.1"
+fluent = { path = "/Users/greg/dev/fluent-rs/fluent", features = ["fluent-pseudo"] }
+fluent-pseudo = { path = "/Users/greg/dev/fluent-rs/fluent-pseudo" }
+intl-memoizer = { path = "/Users/greg/dev/fluent-rs/intl-memoizer" }
 unic-langid = "0.9"
 nsstring = { path = "../../../../xpcom/rust/nsstring" }
 cstr = "0.2"
 xpcom = { path = "../../../../xpcom/rust/xpcom" }
 thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
 l10nregistry = { path = "../l10nregistry-rs" }
-fluent-fallback = "0.6.0"
+fluent-fallback = { path = "/Users/greg/dev/fluent-rs/fluent-fallback" }
 futures = "0.3"
